--- a/styles.css
+++ b/styles.css
@@ -35,10 +35,11 @@ img.decoration {
 
 nav {
 	height: 100%;
-	float: left;
-	width: 200px;
+	float: right;
+	text-align: left;
+	padding: 0;
 	margin: 0;
-	padding: 0px;
+	width: 200px;
 	background-color: #f1f1f1;
 	
 	display: flex;
