--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@ img.decoration {
 	height: 52px;
 }
 
-nav {
+#pokenav {
 	height: 100%;
 	float: left;
 	text-align: left;
@@ -44,17 +44,16 @@ nav {
 	
 	display: flex;
 }
-nav-mobile {
-	position: absolute;
+#nav-mobile {
+	height: calc(100% - 82px);
 	float: left;
 	width: 200px;
 	margin: 0;
 	padding: 0px;
 	background-color: #f1f1f1;
-	overflow-y: scroll;
-	height: calc(100% - 82px);
 	
-	display: flex;
+	position: absolute;
+	overflow-y: scroll;
 }
 
 side {
