--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@ img.decoration {
 	height: 52px;
 }
 
-#pokenav {
+nav {
 	height: 100%;
 	float: left;
 	text-align: left;
@@ -41,10 +41,8 @@ img.decoration {
 	margin: 0;
 	width: 200px;
 	background-color: #f1f1f1;
-	
-	display: flex;
 }
-#nav-mobile {
+nav-mobile {
 	height: calc(100% - 82px);
 	float: left;
 	width: 200px;
