--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,14 @@ img.decoration {
 	left: 15px;
 	height: 52px;
 }
+img.float-center {
+	position:absolute;
+	margin-left: auto;
+	margin-right: auto;
+	left: 0;
+	right: 0;
+	text-align: center;
+}
 img.interactive {
 	cursor: pointer;
 }
