--- a/styles.css
+++ b/styles.css
@@ -45,6 +45,7 @@ img.interactive {
 }
 
 #nav {
+	display: inline-block; /*Along with the main-div's flex display, makes all divs same height as the tallest one.*/
 	float: left;
 	padding: 0;
 	margin: 0;
@@ -64,6 +65,7 @@ img.interactive {
 }
 
 article {
+	display: inline-block;
 	float: left;
 	padding: 20px;
 	width: calc(100% - 400px);
@@ -71,6 +73,7 @@ article {
 }
 
 #side {
+	display: inline-block;
 	float: right;
 	padding: 0;
 	margin: 0;
