--- a/styles.css
+++ b/styles.css
@@ -4,10 +4,11 @@
 }
 
 html {
+	/*height: 100%;*/
 }
 
 body {
-	display: inline-block;
+	min-height: 100vh;
 	font-family: sans-serif;
 	margin: 0;
 	background-color: lightgray;
