--- a/styles.css
+++ b/styles.css
@@ -4,11 +4,11 @@
 }
 
 html {
-	/*height: 100%;*/
+	height: 100%;
 }
 
 body {
-	min-height: 100vh;
+	height: 100%;
 	font-family: sans-serif;
 	margin: 0;
 	background-color: lightgray;
