--- a/styles.css
+++ b/styles.css
@@ -10,8 +10,8 @@ html {
 body {
 	min-height: 100vh;
 	font-family: sans-serif;
-	margin: 0;
 	padding: 0;
+	margin: 0;
 	background-color: lightgray;
 }
 
@@ -44,6 +44,7 @@ img.interactive {
 
 #main-div {
 	display: flex;
+	min-height: 100%;
 }
 
 #nav {
