--- a/styles.css
+++ b/styles.css
@@ -5,24 +5,32 @@
 
 html {
 	height: 100%;
+	margin: 0;
 }
 
 body {
-	min-height: 100vh;
+	height: 100%;
 	font-family: sans-serif;
 	padding: 0;
 	margin: 0;
 	background-color: lightgray;
 }
 
+.page {
+	display: flex;
+	flex-flow: column;
+	height: 100%;
+}
+
 header {
-  background-color: #fa543f;
-  height: 82px;
-  width: 100%;
-  padding: 15px;
-  text-align: center;
-  font-size: 20px;
-  color: white;
+	display: flex;
+	flex: 0 1 82px;
+	background-color: #fa543f;
+	/*width: 100%;*/
+	padding: 15px;
+	text-align: center;
+	font-size: 20px;
+	color: white;
 }
 img.decoration {
 	float: left;
@@ -44,7 +52,7 @@ img.interactive {
 
 #main-div {
 	display: flex;
-	min-height: 100vh;
+	flex: 1 1 auto;
 }
 
 #nav {
@@ -97,8 +105,10 @@ article {
 }
 
 footer {
+	display: flex;
+	flex: 0 1 auto;
 	padding: 5px;
-	width: 100%;
+	/*width: 100%;*/
 	float: left;
 	background-color: darkgray;
 }
