--- a/styles.css
+++ b/styles.css
@@ -130,7 +130,8 @@ article {
 }
 .sideimg {
 	max-width: 160px;
-	margin: 20px 20px 5px 20px;
+	margin-top: 20px;
+	margin-bottom: 5px;
 }
 
 footer {
