--- a/styles.css
+++ b/styles.css
@@ -134,11 +134,11 @@ article {
 	margin-bottom: 5px;
 }
 .bartext {
-	padding-bottom: 7px;
+	padding-bottom: 5px;
 }
-.barline {
+hr.barline {
 	border: 1px dashed;
-	width: 75%;
+	width: 90%;
 	margin: 0 auto;
 }
 
