--- a/styles.css
+++ b/styles.css
@@ -524,7 +524,7 @@ th.speed {
 }
 
 td.stat {
-	width: 200px;
+	width: 100px;
 }
 td.hp {
 	background-color: #ffe3f8;
@@ -546,7 +546,7 @@ td.speed {
 }
 
 td.total {
-	background-image: /Resources/StatTotalBackground.png;
+	background-image: url("/Resources/StatTotalBackground.png");
 }
 
 
