--- a/styles.css
+++ b/styles.css
@@ -67,6 +67,10 @@ img.float-center {
 	margin: 0px;
 	padding: 0px;
 	cursor: pointer;
+	background: url("/Resources/MobileButton.png") no-repeat;
+}
+.mobile-button:hover {
+	background: url("/Resources/MobileButtonHover.png") no-repeat;
 }
 
 #main-div {
