--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ body {
 
 header {
 	display: flex;
-	flex: 0 1 82px;
+	flex: 0 1 82px; /*82 pixels tall*/
 	background-color: #fa543f;
 	padding: 15px;
 	margin: 0px;
@@ -37,7 +37,6 @@ header {
 	height: 52px;
 	margin: 0px;
 	padding: 0px;
-	/*background-color: blue;*/
 }
 #header-mobile {
 	display: flex;
@@ -47,7 +46,6 @@ header {
 	height: 52px;
 	margin: 0px;
 	padding: 0px;
-	/*background-color: green;*/
 }
 .decoration {
 	height: 52px;
@@ -82,7 +80,7 @@ img.float-center {
 
 #main-div {
 	display: flex;
-	flex: 1 1 auto;
+	flex: 1 1 auto; /*Stretch to fill*/
 }
 
 #pokenav {
@@ -103,6 +101,30 @@ img.float-center {
 	
 	position: absolute;
 	overflow-y: scroll;
+}
+
+h1.barheader {
+	margin: 0;
+	padding: 15px;
+	background: #ababab;
+	font-size: 15pt;
+}
+ul {
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+	width: 100%;
+}
+li a {
+	display: block;
+	color: #000;
+	padding: 8px 16px;
+	text-decoration: none;
+}
+li a:hover {
+	background-color: #555;
+	color: white;
+	text-decoration: none;
 }
 
 article {
@@ -155,34 +177,10 @@ hr.barline {
 
 footer {
 	display: flex;
-	flex: 0 1 auto;
+	flex: 0 1 auto; /*Make footer as tall as its content*/
 	padding: 20px;
 	float: left;
 	background-color: darkgray;
-}
-
-h1.barheader {
-	margin: 0;
-	padding: 15px;
-	background: #ababab;
-	font-size: 15pt;
-}
-ul {
-	list-style-type: none;
-	margin: 0;
-	padding: 0;
-	width: 100%;
-}
-li a {
-	display: block;
-	color: #000;
-	padding: 8px 16px;
-	text-decoration: none;
-}
-li a:hover {
-	background-color: #555;
-	color: white;
-	text-decoration: none;
 }
 
 /*Screen Response-----------------------------------------------------------------------*/
