--- a/styles.css
+++ b/styles.css
@@ -572,10 +572,10 @@ table.dexpage {
 	padding: 0px 5px;
 	width: 375px;
 }
-th.dexpage {
+th.entrysource {
 	border-radius: 0px;
 }
-td.dexpage {
+td.entrypage {
 	padding: 5px;
 	text-align: left;
 	border-radius: 0px;
