--- a/styles.css
+++ b/styles.css
@@ -569,13 +569,13 @@ td.total {
 
 table.dexpage {
 	border-radius: 0px;
-	padding: 0px 5px;
+	padding: 2px 10px;
 	width: 375px;
 }
-th.entrysource {
+tr.entrysource {
 	border-radius: 0px;
 }
-td.entrypage {
+tr.entrypage {
 	padding: 5px;
 	text-align: left;
 	border-radius: 0px;
