--- a/styles.css
+++ b/styles.css
@@ -454,6 +454,10 @@ table tr:first-child:last-child th:first-child { /*If this is the only row and t
 }table tr:first-child:last-child td:last-child { /*If this is the only row and this is the last cell in it, round its right corners.*/
 	border-radius: 0 10px 10px 0;
 }
+table tr:first-child td:first-child:last-child { /*If this is the first row and this is the only cell in it, round its top corners*/
+	border-radius: 10px 10px 0 0;
+}
+
 .full {
 	width: 100%;
 }
@@ -572,10 +576,10 @@ table.dexpage {
 	padding: 2px 10px;
 	width: 375px;
 }
-tr.entrysource {
+th.dexpage {
 	border-radius: 0px;
 }
-tr.entrypage {
+td.dexpage {
 	padding: 5px;
 	text-align: left;
 	border-radius: 0px;
