--- a/styles.css
+++ b/styles.css
@@ -511,8 +511,8 @@ h3 {
 	padding: 0px;
 	font-size: 14.5pt;
 }
-table.dexh {
-	min-width: 320px;
+div.dexh {
+	width: 100%;
 	max-width: 375px;
 }
 th.dexh {
