--- a/styles.css
+++ b/styles.css
@@ -531,7 +531,7 @@ td.dexh {
 }
 
 th.stat {
-	width: 80px;
+	width: 25%;
 }
 th.hp {
 	background-color: #ffb4ed;
@@ -553,7 +553,7 @@ th.speed {
 }
 
 td.stat {
-	width: 80px;
+	width: 25%;
 }
 td.hp {
 	background-color: #ffe3f8;
