--- a/styles.css
+++ b/styles.css
@@ -443,6 +443,7 @@ th.sprh {
 	padding-top: 3px;
 	padding-left: 5px;
 	padding-right: 5px;
+	max-width: 320px;
 }
 td.sprf {
 	padding: 24px 24px 8px 24px;
