--- a/styles.css
+++ b/styles.css
@@ -553,7 +553,7 @@ p.color {
 	padding: 1px;
 }
 p.indeterminate {
-	background-color: #c4b3cf;
+	background-color: #b197c2;
 }
 p.red {
 	background-color: #f11616;
